Fixed styles errors after merge // improved logics and code // added progress bar to video output // load onboarding just once

--- a/src/components/DrawerMenu/styles.css
+++ b/src/components/DrawerMenu/styles.css
@@ -87,6 +87,10 @@
   color: #1447a6;
   margin-right: 7px;
   width: 40%;
+  background: none;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 0;
 }
 
 .arrow-down {
@@ -104,11 +108,16 @@
   z-index: 999888;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 2px;
+  width: 80px;
 }
 
 .dropdown-trans-picker .option-trans {
-  color: #373f41;
+  font-family: Rawline !important;
+  color: #4e4e4e;
   padding: 6px 20px 6px 20px;
+  background: initial;
+  font-weight: 600;
+  width: 100%;
 }
 
 .dropdown-trans-picker .option-trans.selected {
