--- a/src/components/VideoOutputModal/styles.css
+++ b/src/components/VideoOutputModal/styles.css
@@ -5,16 +5,24 @@
 
 .videooutput-modal .modal-wrapper {
   border-radius: 16px 16px 0px 0px;
-  height: 220px;
+  height: auto;
+  max-height: 500px;
+  min-height: 220px;
   bottom: 0;
 }
 
+.videooutput-modal .modal-wrapper .ion-page {
+  display: block;
+  position: inherit;
+  contain: inherit;
+}
+
 .videooutput-modal.player .modal-wrapper {
-  height: 440px;
+  /* height: 440px; */
 }
 
 .videooutput-modal.buttons-off .modal-wrapper {
-  height: 350px;
+  /* height: 350px; */
 }
 
 .videooutput-modal.doNotShowModal {
@@ -27,12 +35,13 @@
 
 .videooutput-modal .ion-page {
   padding: 16px 20px;
+  height: 100%;
 }
 
 .videooutput-modal .modal-title {
   font-weight: 700;
   color: #4b4b4b;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 20px;
   font-family: Roboto;
   text-align: center;
@@ -54,11 +63,11 @@
   border: 1px solid #e0e0e0;
   box-sizing: border-box;
   border-radius: 4px;
-  padding: 10px 8px;
+  padding: 5px 8px;
   /* overflow: hidden;
   overflow-x: auto;
   white-space: nowrap; */
-  margin: 10px 0px;
+  margin: 15px 0px;
   display: flex;
   flex-flow: wrap;
 }
@@ -143,7 +152,6 @@
 }
 
 .player-progress-container-video {
-  margin-top: -2px;
   width: calc(100%);
   height: 6px;
   background: #d6e5f9;
