--- a/src/pages/Historic/styles.css
+++ b/src/pages/Historic/styles.css
@@ -128,12 +128,14 @@
   border: 1px solid #e0e0e0;
   box-sizing: border-box;
   border-radius: 4px;
-  padding: 10px 8px;
-  overflow: hidden;
+  padding: 5px 8px;
+  /* overflow: hidden;
   overflow-x: auto;
-  white-space: nowrap;
+  white-space: nowrap; */
   margin: 5px 15px;
   background: transparent;
+  display: flex;
+  flex-flow: wrap;
 }
 
 .historic-container .container-outputs span {
