--- a/src/components/ErrorModal/styles.css
+++ b/src/components/ErrorModal/styles.css
@@ -40,7 +40,7 @@
   font-size: 16px;
   line-height: 150%;
   /* identical to box height, or 24px */
-  color: #1B1B1B;
+  color: #1b1b1b;
   margin: 0 !important;
   padding: 0 !important;
 }
@@ -54,9 +54,8 @@
   margin: 0 !important;
   padding: 0 !important;
   text-align: center;
-  color: #1B1B1B;
+  color: #1b1b1b;
 }
-
 
 .error-modal .loading {
   width: 50px;
