--- a/src/pages/Historic/styles.css
+++ b/src/pages/Historic/styles.css
@@ -136,6 +136,7 @@
   background: transparent;
   display: flex;
   flex-flow: wrap;
+  width: 100%;
 }
 
 .historic-container .container-outputs span {
@@ -146,10 +147,14 @@
   line-height: 17.5px;
   border-radius: 48px;
   padding: 6px 12px;
-  margin-left: 3px;
+  margin: 4px 5px;
   cursor: pointer;
   display: inline-block;
   border: none;
+}
+
+.historic-container .list-outputs {
+  display: flex;
 }
 
 .date-desc {
