--- a/src/components/DrawerMenu/styles.css
+++ b/src/components/DrawerMenu/styles.css
@@ -93,6 +93,10 @@
   padding: 0;
 }
 
+.drawer-menu-sub-item.translator {
+  outline: none;
+}
+
 .arrow-down {
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
