--- a/src/components/ErrorModal/styles.css
+++ b/src/components/ErrorModal/styles.css
@@ -51,7 +51,7 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 150%;
-  margin: 0 !important;
+  margin: 5px 10px !important;
   padding: 0 !important;
   text-align: center;
   color: #1b1b1b;
