--- a/src/components/TutorialPopover/styles.css
+++ b/src/components/TutorialPopover/styles.css
@@ -1,5 +1,5 @@
 .tutorial-popover-container {
-  background: #1B1B1B;
+  background: #1b1b1b;
   box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
   display: flex;
@@ -9,6 +9,27 @@
   position: relative;
 }
 
+.tutorial-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex: 1;
+}
+
+.tutorial-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 16px;
+  flex: 1;
+}
+
+.tutorial-popover-container button {
+  border: none;
+  background: none;
+}
+
 .tutorial-popover-container h1 {
   font-family: Rawline;
   font-style: normal;
@@ -16,11 +37,11 @@
   font-size: 14px;
   line-height: 120%;
   /* identical to box height, or 17px */
-  
+
   display: flex;
   align-items: center;
-  
-  color: #FFFFFF;
+
+  color: #ffffff;
   margin: 0;
 }
 
@@ -31,27 +52,40 @@
   font-size: 12px;
   line-height: 150%;
   /* identical to box height, or 18px */
-  
+
   display: flex;
   align-items: center;
   margin: 0;
-  color: #FFFFFF;
+  color: #ffffff;
   padding-top: 4px;
 }
 
+.tutorial-popover-container span {
+  font-family: Rawline;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 100%;
+  /* identical to box height, or 12px */
+
+  display: flex;
+  align-items: center;
+
+  color: #888888;
+}
 
 .container__arrow {
   /* Size */
   height: 8px;
   width: 8px;
 
-  background-color:#1B1B1B;
+  background-color: #1b1b1b;
   position: absolute;
 }
 
 .container__arrow--tl {
   /* Position at the top left corner */
-  left: 32px;
+  left: 16px;
   top: 0px;
 
   /* Border */
@@ -118,7 +152,7 @@
 .container__arrow--bl {
   /* Position at the bottom left corner */
   bottom: -8px;
-  left: 32px;
+  left: 16px;
 
   /* Border */
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
@@ -140,7 +174,7 @@
 .container__arrow--br {
   /* Position at the bottom right corner */
   bottom: -8px;
-  right: 32px;
+  right: 16px;
 
   /* Border */
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
