--- a/src/pages/Translator/styles.css
+++ b/src/pages/Translator/styles.css
@@ -62,6 +62,10 @@
   flex-direction: row;
 }
 
+.translator-button-save:disabled {
+  background-color: grey;
+}
+
 .translator-button-save span {
   margin-left: 8px;
   font-family: Roboto;
