--- a/src/components/RevisionModal/styles.css
+++ b/src/components/RevisionModal/styles.css
@@ -104,8 +104,8 @@
   justify-content: center;
   align-items: center;
   padding: 8px 16px;
-
-  width: 142px;
+  flex-wrap: nowrap;
+  width: 160px;
   height: 39px;
 
   background: #ffffff;
@@ -126,8 +126,8 @@
   justify-content: center;
   align-items: center;
   padding: 8px 16px;
-
-  width: 142px;
+  flex-wrap: nowrap;
+  width: 160px;
   height: 39px;
 
   background: #ffffff;
