fix: Alteração de slogan governamental

--- a/src/pages/About/styles.css
+++ b/src/pages/About/styles.css
@@ -82,9 +82,8 @@
 }
 
 .about-image-realizadores {
-  width: 100%;
-  object-fit: cover;
-  max-width: 512px;
+  width: 120px;
+  margin-top: 16px;
 }
 
 .about-container-realizadores-footer {
