button disabled during tutorial

--- a/src/components/Player/styles.css
+++ b/src/components/Player/styles.css
@@ -110,6 +110,10 @@
   align-items: center;
 }
 
+.player-button-rounded:disabled {
+  background: grey;
+}
+
 .player-action-button img {
   width: 24px;
   height: 24px;
