--- a/src/pages/About/styles.css
+++ b/src/pages/About/styles.css
@@ -69,6 +69,9 @@
 
 .about-container-realizadores {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 
   font-family: Rawline;
   font-style: normal;
@@ -81,17 +84,37 @@
   --color: #000000;
 }
 
-.about-image-realizadores {
-  width: 120px;
-  margin-top: 16px;
+.ministries-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  gap: 20px;
+
+  width: 100%;
 }
+
+.ministry {
+  display: flex;
+  flex-direction: column;
+
+  width: 50%;
+}
+
+.ministry span {
+  text-align: right;
+  text-transform: uppercase;
+
+  font-size: .7rem;
+  font-weight: normal;
+  white-space: nowrap;
+}
+
 
 .about-container-realizadores-footer {
   display: flex;
   width: 100%;
   justify-content: space-between;
   flex-direction: row;
-  margin-top: 20px;
 }
 
 .about-container-redes-sociais {
