--- a/src/pages/Dictionary/styles.css
+++ b/src/pages/Dictionary/styles.css
@@ -52,6 +52,11 @@
 
   /*SearchBar Icon*/
   background-image: none!important;
+
+  /* Removes search icon */
+  .searchbar-search-icon { 
+    display:none; width:0; height:0;
+   }
 }
 .sc-ion-searchbar-md-h{
   border: 1px solid #B9B9B9;
