Fixed modals styling.

--- a/src/components/ErrorModal/styles.css
+++ b/src/components/ErrorModal/styles.css
@@ -3,34 +3,17 @@
   font-family: Rawline;
 }
 
-.error-modal .modal-wrapper {
+.error-modal::part(content) {
   border-radius: 8px;
   height: 180px;
   width: 200px;
 }
 
-.error-modal .ion-page {
+.error-modal .ion-delegate-host {
   justify-content: center;
   display: flex;
   align-items: center;
   flex-direction: column;
-}
-
-.error-modal .modal-title {
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  color: var(--ion-color-modal-body);
-  /* margin: 5px 0px -15px 0px; */
-}
-
-.error-modal .modal-desc {
-  color: var(--ion-color-modal-body);
-  font-size: 14px;
-  line-height: 20px;
-  text-align: center;
-  margin: 20px 0px 0px 0px;
 }
 
 .error-modal h1 {
