--- a/src/components/EvaluationModal/styles.css
+++ b/src/components/EvaluationModal/styles.css
@@ -3,13 +3,13 @@
   font-family: Rawline;
 }
 
-.evaluation-modal .modal-wrapper {
+.evaluation-modal::part(content) {
   border-radius: 8px;
   height: 147px;
   width: 283px;
 }
 
-.evaluation-modal .ion-page {
+.evaluation-modal .ion-delegate-host {
   padding: 16px 20px;
   justify-content: center;
   display: flex;
@@ -40,6 +40,7 @@
   justify-content: flex-end;
   width: 100%;
   padding-top: 8px;
+  padding-right: 8px;
 }
 
 .evaluation-modal-container-close-button-container button {
@@ -47,7 +48,7 @@
   background: none;
 }
 
-.evaluation-modal .ion-page{
+.evaluation-modal .ion-delegate-host{
   padding-right: 0px;
   padding-bottom: 0px;
   padding-top: 0px;
