--- a/src/components/EvaluationYesModal/styles.css
+++ b/src/components/EvaluationYesModal/styles.css
@@ -3,14 +3,14 @@
   font-family: Rawline;
 }
 
-.evaluation-yes-modal .modal-wrapper {
+.evaluation-yes-modal::part(content) {
   border-radius: 8px;
   height: 147px;
   width: 273px;
   margin: 0px 70px;
 }
 
-.evaluation-yes-modal .ion-page {
+.evaluation-yes-modal .ion-delegate-host {
   padding: 16px 20px;
   justify-content: center;
   display: flex;
@@ -34,7 +34,7 @@
   text-align: center;
   margin: 20px 0px 0px 0px;
 }
-.evaluation-yes-modal .ion-page{
+.evaluation-yes-modal .ion-delegate-host {
   padding-right: 0px;
   padding-bottom: 0px;
   padding-top: 0px;
