--- a/src/components/GenerateModal/styles.css
+++ b/src/components/GenerateModal/styles.css
@@ -3,13 +3,13 @@
   font-family: Rawline;
 }
 
-.generate-modal .modal-wrapper {
+.generate-modal::part(content) {
   border-radius: 8px;
   height: 160px;
   width: 250px;
 }
 
-.generate-modal .ion-page {
+.generate-modal .ion-delegate-host {
   justify-content: center;
   display: flex;
   align-items: center;
