--- a/src/components/GenerateModal/styles.css
+++ b/src/components/GenerateModal/styles.css
@@ -3,13 +3,13 @@
   font-family: Rawline;
 }
 
-.generate-modal .modal-wrapper {
+.generate-modal::part(content) {
   border-radius: 8px;
   height: 160px;
   width: 250px;
 }
 
-.generate-modal .ion-page {
+.generate-modal .ion-delegate-host {
   justify-content: center;
   display: flex;
   align-items: center;
@@ -22,7 +22,7 @@
   font-size: 16px;
   line-height: 150%;
   /* identical to box height, or 24px */
-  color: #1B1B1B;
+  color: #1b1b1b;
   margin: 0 !important;
 }
 
@@ -37,9 +37,8 @@
   padding: 4px 0 16px 0;
   /* identical to box height, or 21px */
 
-  color: #1B1B1B;
+  color: #1b1b1b;
 }
-
 
 .generate-modal .modal-desc {
   color: var(--ion-color-modal-body);
@@ -54,8 +53,8 @@
   height: 50px;
 }
 
-.generate-modal-spinner  {
+.generate-modal-spinner {
   width: 58px;
   height: 58px;
-  --color: #1447A6;
+  --color: #1447a6;
 }
