--- a/src/pages/Dictionary/styles.css
+++ b/src/pages/Dictionary/styles.css
@@ -9,19 +9,18 @@
 .dictionary-box {
   display: flex;
   flex-direction: column;
-  
+
   width: 100%;
   padding: 16px;
   padding-top: 0px;
   padding-bottom: 0px;
-
 }
 
 .dictionary-input-box {
   position: relative;
 }
 .dictionary-textarea:hover {
-  --background: #FFF5CC;
+  --background: #fff5cc;
   border: 1px solid #1447a6;
 }
 .dictionary-textarea {
@@ -31,8 +30,8 @@
   font-family: Rawline;
   z-index: 0;
   color: #000;
-  
-  --placeholder-color: #B9B9B9;
+
+  --placeholder-color: #b9b9b9;
 
   margin-top: 8px;
   /*height: 100%;*/
@@ -51,10 +50,17 @@
   border-top-width: 0px;
 
   /*SearchBar Icon*/
-  background-image: none!important;
+  background-image: none !important;
+
+  /* Removes search icon */
+  .searchbar-search-icon {
+    display: none;
+    width: 0;
+    height: 0;
+  }
 }
-.sc-ion-searchbar-md-h{
-  border: 1px solid #B9B9B9;
+.sc-ion-searchbar-md-h {
+  border: 1px solid #b9b9b9;
   box-sizing: border-box;
   border-radius: 4px;
   --box-shadow: none;
@@ -62,8 +68,8 @@
 .searchbar-input {
   padding-left: 9px !important;
 }
-.searchbar-clear-button .sc-ion-searchbar-md{
-  color:#1447a6;
+.searchbar-clear-button .sc-ion-searchbar-md {
+  color: #1447a6;
   width: 16px;
   height: 24px;
 }
@@ -83,18 +89,16 @@
   line-height: 100%;
 }
 
-
-
-.dictionary-words-style{
+.dictionary-words-style {
   font-family: Rawline;
   font-style: normal;
   font-weight: normal;
   font-size: 16.8px;
   line-height: 130%;
-  
-  color: #1447A6;
+
+  color: #1447a6;
 }
-.dictionary-words-list{
+.dictionary-words-list {
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -103,10 +107,9 @@
   margin-top: 35px;
 
   font-family: Rawline;
-  color: #1447A6;
-
+  color: #1447a6;
 }
-.dictionary-word-item{
+.dictionary-word-item {
   --padding-start: 0px;
   --min-height: 0px;
 
@@ -115,7 +118,7 @@
 .dictionary-container-box-ion-text {
   display: flex;
   align-items: center;
-  
+
   margin-top: 8px;
   margin-right: 16px;
   margin-left: 16px;
@@ -145,6 +148,6 @@
 
   color: #747474;
 }
-.dictionary-container-box-ion-mic-icon{
-  color:#B9B9B9;
+.dictionary-container-box-ion-mic-icon {
+  color: #b9b9b9;
 }
