--- a/src/components/Player/styles.css
+++ b/src/components/Player/styles.css
@@ -14,7 +14,6 @@
 .player-action-container {
   position: absolute;
   bottom: 0;
-  height: 78px;
   min-height: 78px;
   width: 100%;
   display: flex;
@@ -28,7 +27,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  min-height: 72px;
+  min-height: calc(72px + var(--ion-safe-area-bottom) * 0.3);
+  padding-bottom: calc(var(--ion-safe-area-bottom) * 0.5);
   background: white;
 }
 
@@ -70,8 +70,8 @@
 .player-action-button-transparent {
   background: transparent;
   border: none;
-  height: 48px;
-  width: 48px;
+  height: 32px;
+  width: 32px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,8 +79,9 @@
 }
 
 .player-action-button-transparent img {
-  width: 32px;
-  height: 32px;
+  width: 100%;
+  height: auto;
+  object-fit: contain; /* This line ensures the aspect ratio is maintained */
 }
 
 .player-container-buttons {
