--- a/src/pages/Customization/styles.css
+++ b/src/pages/Customization/styles.css
@@ -62,6 +62,7 @@
   align-items: center;
   justify-content: center;
   padding: 16px;
+  padding-bottom: var(--ion-safe-area-bottom);
 }
 
 .customization-button-menu {
