--- a/src/components/GenerateModal/styles.css
+++ b/src/components/GenerateModal/styles.css
@@ -5,7 +5,7 @@
 
 .generate-modal::part(content) {
   border-radius: 8px;
-  height: 160px;
+  height: 170px;
   width: 250px;
 }
 
@@ -57,4 +57,29 @@
   width: 58px;
   height: 58px;
   --color: #1447a6;
+}
+
+.generate-modal .generate-modal-container-close-button-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  padding-right: 8px;
+  opacity: 0;
+}
+
+.generate-modal .generate-modal-container-close-button-container.fade-in {
+  animation: fadeIn 0.9s forwards;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.generate-modal .generate-modal-container-close-button-container button {
+  border: none;
+  background: none;
 }
