--- a/src/pages/Dictionary/styles.css
+++ b/src/pages/Dictionary/styles.css
@@ -88,6 +88,26 @@
   font-size: 12px;
   line-height: 100%;
 }
+.dictionary-container-ion-chips-abbreviation {
+  font-family: Rawline;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 100%;
+  color: #1447a6;
+  background: #d6e5f9;
+  font-weight: bold;
+}
+
+.disabled-chip-abbreviation {
+  pointer-events: none;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background-color: #1447a6;
+  margin-left: 30px;
+}
 
 .dictionary-words-style {
   font-family: Rawline;
