--- a/src/pages/Dictionary/styles.css
+++ b/src/pages/Dictionary/styles.css
@@ -19,10 +19,10 @@
 .dictionary-input-box {
   position: relative;
 }
-.dictionary-textarea:hover {
+/* .dictionary-textarea:hover {
   --background: #fff5cc;
   border: 1px solid #1447a6;
-}
+} */
 .dictionary-textarea {
   /*border: 1px solid #B9B9B9;*/
   box-sizing: border-box;
