Updated ionic version and fix android issues on android 14.

--- a/src/components/RevisionModal/styles.css
+++ b/src/components/RevisionModal/styles.css
@@ -84,7 +84,7 @@
   line-height: 125%;
 
   border: 2px solid #bababa;
-  width: 100%;
+  width: 100% !important;
   box-sizing: border-box;
   border-radius: 4px;
   font-family: Rawline;
