--- a/src/pages/Translator/styles.css
+++ b/src/pages/Translator/styles.css
@@ -1,6 +1,6 @@
 .translator-textarea {
   border: 1px solid #bababa;
-  width: 100%;
+  width: 100% !important;
   box-sizing: border-box;
   border-radius: 4px;
   font-family: Rawline;
