adds customizatio tuto & changes dict searchbar placeholder

--- a/src/pages/Customization/styles.css
+++ b/src/pages/Customization/styles.css
@@ -76,7 +76,7 @@
   border-bottom-width: 2px;
   border-bottom-style: solid;
   padding-bottom: 3px;
-  margin: 0 !important;
+  margin-top: 5px !important;
 }
 
 .player-container {
