--- a/src/components/EvaluationModal/styles.css
+++ b/src/components/EvaluationModal/styles.css
@@ -61,8 +61,8 @@
   flex-direction: row;
   /* margin-top: 15px; */
   margin-top: 16px;
+  margin-bottom: 16px;
   background: transparent;
-  border: none;
 }
 
 .evaluation-modal-container-rating-chips-yes {
@@ -75,7 +75,7 @@
 
   display: flex;
 
-  color: #4e4e4e;
+  color: #000000;
   background: #ffffff;
   border: 1px solid #e0e0e0;
 }
@@ -91,8 +91,8 @@
   flex: 1;
   justify-content: space-between;
 
-  color: #4e4e4e;
-  background: #ffffff;
+  color: #fefefe;
+  background: #1447a6;
   border: 1px solid #e0e0e0;
 }
 .thumbs-color {
