--- a/src/pages/Customization/styles.css
+++ b/src/pages/Customization/styles.css
@@ -115,13 +115,22 @@
   margin-right: 16px;
 }
 
-.md button.alert-button.popup-yes {
+button.alert-button.popup-yes {
   background-color: #ffffff;
   color: rgb(0, 0, 0);
+  height: 44px;
+  width: 88px;
 }
 
-.md button.alert-button.popup-no {
+button.alert-button.popup-no {
   background-color: #1447A6;
   color: rgb(255, 255, 255);
+  height: 44px;
+  width: 88px;
 }
 
+.bodypart p {
+  position:'absolute';
+  color:'black';
+  right: '50%';
+}
