--- a/src/pages/Dictionary/styles.css
+++ b/src/pages/Dictionary/styles.css
@@ -74,8 +74,7 @@
 .dictionary-container-ion-chips {
   display: flex;
   flex-direction: row;
-  margin-left: 16px;
-  margin-top: 12px;
+  margin: 12px 16px 0 16px;
 
   width: 100%;
 }
